--- a/style.css
+++ b/style.css
@@ -16,16 +16,20 @@
 }
 
 /* general */
-h2 {
-    font-family: 'Industry';
-}
+h2,
 h1 {
     font-family: 'Industry';
+    text-transform: uppercase;
+
+}
+
+h1 {
     font-size: 3rem;
 }
 
 p {
     font-family: 'Inter', sans-serif;
+    font-size: 1.5rem;
 }
 
 
@@ -50,8 +54,8 @@ main {
 .first-section{
     /*background-color: chartreuse;*/
     text-align: center;
-    background-color: aquamarine;
-    height: 1000px;
+    height: auto;
+    margin: 5%;
 
     
 }
@@ -74,17 +78,14 @@ main {
 }
 
 
-.image-even-cols {
+.image-even-cols img {
     flex: 1;
-    width: 600px;
-    margin: auto;
-     
-}
-
-.container img {
-    width: 100%;
+    width: 60%;
     height: auto;
-    object-fit: contain;
+    margin: auto;
+    border-radius: 10px;
+    /*margin-top: 20%;*/
+     
 }
 
 .content-even-cols {
@@ -96,8 +97,16 @@ main {
 .container  {
     display: flex;
     height: 500px;
-    border: 2px solid yellow;
+    /*border: 2px solid yellow;*/
 }
+
+.content-even-cols h1 {
+    padding: 3rem 0;
+}
+
+
+/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+
 
 .core-values-container{
 
@@ -116,7 +125,7 @@ main {
     width: 30%;
     padding: 2rem;
     min-height: 430px;
-    border: 3px solid cyan;
+    /*border: 3px solid cyan;*/
 }
 
 .content {
@@ -132,4 +141,94 @@ main {
 
 .content p {
     line-height: 2rem;
+}
+
+.second-section-title {
+    padding: 2rem 0;
+}
+
+/* ++++++++++++++++++++++++++++ THIRD SECTION ALIGNMENT ++++++++++++++++++++++++++++*/
+
+.third-section-members {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+/* ++++++++++++++++++++++++++++ MEET OUR MEMBERS ANIMATION +++++++++++++++++++++++++++++++ */
+
+.animated-text {
+    font-family: 'Inter';
+    text-align: center;
+    position: absolute;
+    top: 90%;
+    left: 38%;
+    font-size: 3em;
+    min-width: 280px;
+    color: black;
+}
+
+.animated-text span {
+    position:relative;
+}
+
+.animated-text span::before {
+    content: "team.";
+    font-weight: bold;
+    color: red;
+    animation: words 23.5s infinite;
+
+}
+
+.animated-text span::after {
+    content: "";
+    position: absolute;
+    width: calc(100% + 8px);
+    height: 100%;
+    background-color: white;
+    border-left: 1px solid rgb(235, 114, 114);
+    right: -12px;
+    animation: cursor-blink 0.75s infinite, typing 23s steps(14) infinite;
+}
+
+@keyframes cursor-blink {
+    to {
+        border-left: 2px solid transparent; /* es lo mismo que 100% en teoría */
+    }
+}
+
+@keyframes words {
+    0%, 20% {
+        content: "team.";
+    }
+
+    21%, 40% {
+        content: "family.";
+    }
+
+    41%, 60% {
+        content: " talent.";
+    }
+
+    61%, 80% {
+        content: "torque.";
+    }
+
+    81%, 100% {
+        content: "power.";
+    }
+    
+}
+
+@keyframes typing {
+
+    
+    10%, 15%, 30%, 35%, 50%, 55%, 70%, 75%, 90%, 95% {
+        /*width: calc(100% + 12px);*/
+        width: 0;
+    }
+    5%, 20%, 25%, 40%, 60%, 65%, 80%, 85% {
+        width: calc(100% + 12px);
+       /* width: 0;*/
+    }
+    
 }
