--- a/style.css
+++ b/style.css
@@ -5,13 +5,22 @@
     font-family: Industry;
     src: url("/resources/Industry-BoldItalic.ttf");
 }
+body {
+    width: 100%;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;  /* segun google que para que todo lo que posicione sea relatiov al body*/
 
+}
 /* containers */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    /*border: 3px solid red;*/
+
+    /*border: 3px solid lightblue;*/
 
 }
 
@@ -70,7 +79,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 90%;
+    width: auto;
     margin: 10% auto;
    
    
@@ -160,8 +169,7 @@ main {
     font-family: 'Inter';
     text-align: center;
     position: absolute;
-    top: 90%;
-    left: 38%;
+    margin: auto;
     font-size: 3em;
     min-width: 280px;
     color: black;
@@ -230,5 +238,165 @@ main {
         width: calc(100% + 12px);
        /* width: 0;*/
     }
+    
+}
+
+/* OUR MEMBERS containers */
+
+
+.third-section-members {
+    max-width: 1400px; /*no SE*/
+    /*background-color: red;*/
+    width: 100%;
+    padding: 80px 0;
+    overflow: hidden; /* muajaj y no se ve comotequedass*/
+    font-family: 'Inter';
+   
+   
+}
+
+.third-section-members .main-card, 
+.third-section-members .second-card {
+    width: 200%; /* ps ya ni modo*/
+    /*background-color: grey;*/
+    display: flex;
+    margin-top: 15%; 
+    justify-content: space-around; /*space-evenly*/
+    transition: all 2s ease;
+    
+}
+
+/* ++++++++++++ RADIO BUTTONS ++++++++++++++++++++++ */
+
+#two:checked ~ .main-card { /* cuando se triggerée todos los siguientes elemnts main-card...*/
+    margin-left: -100%; /* que se vaya hasta donde no sea visible y la otra column sí */
+
+}
+
+#two-second:checked ~ .second-card:not(.main-card) { /* cuando se triggerée todos los siguientes elemnts main-card...*/
+    margin-left: -100%; /* que se vaya hasta donde no sea visible y la otra column sí */
+
+}
+
+/* ++++++++++++ CARD AESTHETIC ++++++++++++++++++++++*/
+
+.main-card .cards,
+.second-card .cards {
+    width: calc(100% / 2 - 10px); /* para que sea constante en todos los devices?*/ 
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-card .cards .card,
+.second-card .cards .card {
+    background-color: white;
+    width: /*calc(100% / 2 - 10px);*/ 400px;
+    /*height: 350px;*/
+    padding: 30px 10px;
+    border: 2px solid black;
+    border-radius: 20px;
+    margin: 0 20px;
+    transition: all 0.4s ease;
+}
+
+/* +++++++++++++++ TRANSITIONS +++++++++++++++++++++*/
+
+.main-card .cards .card:hover,
+.second-card .cards .card:hover {
+    transform:translateY(15px); /* hover pq salten juasjuas*/
+}
+
+.cards .card .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+/* +++++++++++++ CARD IMAGES +++++++++++++++++++++++++*/
+
+.cards .card .content .img {
+    height: 130px;
+    width: 130px;
+    margin-bottom: 15px;
+    background-color: red;
+    padding: 3px;
+    border-radius: 50%;
+}
+
+.card .content .img img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    background-color: white;
+    border: 2px solid white;
+}
+
+/*+++++++++++++++ CARD CONTENT +++++++++++++++++++++++++ */
+
+.card .content .details .name {
+    font-size: 1.5em;
+    font-weight: 500;
+}
+
+.card .content .details .job {
+    font-size: 0.60em;
+    color: red;
+}
+
+/* MEDIA ICONS */
+
+.card .content .media-icons img {
+    height: 30px;
+    width: 30x;
+    background: red;
+    margin: 0 4px;
+    border-radius: 50%;
+    padding: 5px;
+    text-align: center;
+    line-height: 35px;
+    font-size: 15px;
+    border: 2px solid transparent;
+    transition: all 0.2s ease;
+    
+    
+}
+
+.card .content .media-icons {
+    display: flex;
+    margin-top: 10px;
+}
+
+.content .media-icons img:hover {
+    border-color: black;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+/* ++++++++++++ SCROLL EFFECT +++++++++++++++ */
+
+/* BOTONS DE SCROLL */
+.button {
+    display: flex;
+    margin: 20px;
+    justify-content: center;
+}
+
+.button label { /* se puede poner classes a labels q */
+    height: 15px;
+    width: 15px;
+    border-radius: 20px;
+    border-color: black;
+    background-color: red;
+    margin: 0 4px;
+
+    /* transition pq no se vea feito */
+    transition: all 0.5s ease;
+}
+
+.button label.active,
+.button label.active-second { /* .one o .active es lo mismo. así se ve bonito */
+    width: 35px; /* se hace anchito pq parzca un slider y no dos puntitos separdos */
     
 }
