--- a/style.css
+++ b/style.css
@@ -384,10 +384,10 @@ main {
 }
 
 .button label { /* se puede poner classes a labels q */
+    padding-top: 0;
     height: 15px;
     width: 15px;
     border-radius: 20px;
-    border-color: black;
     background-color: red;
     margin: 0 4px;
 
