--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ main {
 /* OUR MEMBERS containers */
 
 
-.third-section-members {
+.third-section-container {
     max-width: 1400px; /*no SE*/
     /*background-color: red;*/
     width: 100%;
@@ -257,7 +257,7 @@ main {
    
 }
 
-.third-section-members .main-card, 
+.third-section-container .main-card, 
 .third-section-members .second-card {
     width: 200%; /* ps ya ni modo*/
     /*background-color: grey;*/
@@ -397,28 +397,10 @@ main {
     transition: all 0.5s ease;
 }
 
-.button label.one-active { /* .one o .active es lo mismo. así se ve bonito */
-    width: 35px; /* se hace anchito pq parzca un slider y no dos puntitos separdos */
-    
-}
-
 /* ++++++++++++++ slide left to right transition ++++++++++++++++++++++++ */
 
-#one:checked ~ .button label.one { /* va a triggerear los elementos quedespués de estar checkesdo cumplen con esas clases */
-    width: 35px; /* se checkea el rpiermero, so se hace anchito*/
+#one:checked ~ .button label.one {
+    width: 35px;
 }
 
-#two:checked ~ .button label.two{
-    width: 35px; /*se checkea el segundo radio y el segundo labelse hace anchito*/
-} 
-#two:checked ~ .button label.one{
-    width: 15px; /* se checkea el segundo radioy el primer label se hace chiquito */
-}
 
-#one:checked ~ .button label.two {
-    width: 15px; /* se chequea el primer radio y el seundo label dse hace chiquito */
-}
-
-input[type="radio"] { /* desaparecer los radios jejshj*/
-    display: none;
-}
