--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ main {
 .animated-text {
     font-family: 'Inter';
     text-align: center;
-    position: absolute;
+    position: relative;
     margin: auto;
     font-size: 3em;
     min-width: 280px;
@@ -262,7 +262,7 @@ main {
     width: 200%; /* ps ya ni modo*/
     /*background-color: grey;*/
     display: flex;
-    margin-top: 15%; 
+    padding-top: 5%;
     justify-content: space-around; /*space-evenly*/
     transition: all 2s ease;
     
@@ -287,6 +287,7 @@ main {
     width: calc(100% / 2 - 10px); /* para que sea constante en todos los devices?*/ 
     display: flex;
     justify-content: space-between;
+    padding-bottom: 30px;
 }
 
 .main-card .cards .card,
@@ -397,10 +398,25 @@ main {
     transition: all 0.5s ease;
 }
 
+.button label.active {
+    width: 35px;
+}
 /* ++++++++++++++ slide left to right transition ++++++++++++++++++++++++ */
 
 #one:checked ~ .button label.one {
     width: 35px;
 }
+#two:checked ~.button label.two {
+    width: 35px;
+}
+#two:checked ~.button label.one {
+    width: 15px;
+}
+#one:checked ~.button label.two {
+    width: 15px;
+}
 
+input[type="radio"] { /* desaparecer los radios jejshj*/
+    display: none;
+}
 
