--- a/style.css
+++ b/style.css
@@ -49,6 +49,33 @@ body {
     
 }
 
+/* header */
+
+header {
+    background-color: rgb(0, 0, 0);
+    padding: 20px;
+    height: 110px;
+    width: 100%;
+    position: fixed;
+    z-index: 3;
+    animation: navLoad 1.5s;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    top: 0;
+    
+}
+
+header nav{
+
+    display: flex;
+    align-items: center;
+    align-self: center;
+
+}
+
 /* DESCUBRIMIENTO MISTERIOSO:
 si quieres tener dos bloques adyacentes como en un layout,
 ambos bloques pueden estar en flex y centrados, cada uno
