--- a/style.css
+++ b/style.css
@@ -64,18 +64,45 @@ header {
     align-content: center;
     justify-content: space-evenly;
     flex-direction: column;
-    top: 0;
+    /*top: 0;*/
     
 }
 
 header nav{
-
     display: flex;
     align-items: center;
     align-self: center;
+}
+
+header ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    /*margin-top: 35px;
+    margin-left: 20px;*/
+    align-items: center;
+    justify-content: center;
 
 }
 
+header ul li {
+    margin: 0 2.5rem;
+    padding: 0 1rem;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+    border-radius: 2px;
+
+}
+
+header ul li:hover :not(#logo-engrane) {
+    background-color: rgb(231, 0, 0);
+}
+
+header ul li #logo-engrane:hover {
+    background-color: white;
+}
 /* DESCUBRIMIENTO MISTERIOSO:
 si quieres tener dos bloques adyacentes como en un layout,
 ambos bloques pueden estar en flex y centrados, cada uno
