--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ header nav{
     display: flex;
     align-items: center;
     align-self: center;
+    color: white;
 }
 
 header ul {
@@ -104,6 +105,25 @@ header ul li #logo-engrane:hover {
     background-color: white;
 }
 
+#logo-a:hover {
+    color: transparent !important;
+}
+
+
+header a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5rem;
+
+}
+
+header img {
+    padding: 5px;
+    align-self: center;
+    margin-left: -10px;
+}
 
 /* DESCUBRIMIENTO MISTERIOSO:
 si quieres tener dos bloques adyacentes como en un layout,
