--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ main {
     padding: 3rem 0;
 }
 
-@media screen and (min-width: 1300px ) {
+@media screen and (max-width: 1300px) {
     .even-cols {
         flex-direction: column-reverse;
         text-wrap: wrap;
